--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,11 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.google.firebase:firebase-auth:11.0.4'
-    //implementation 'com.google.firebase:firebase-auth:11.6.0'
     implementation 'com.google.firebase:firebase-database:11.0.4'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-    compile 'com.aurelhubert:ahbottomnavigation:0.1.3'
-    //compile 'com.google.firebase:firebase-auth:11.6.0'
+    implementation 'com.aurelhubert:ahbottomnavigation:0.1.3'
 }
 
 
