--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,20 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".patientOptions" />
-        <activity android:name=".otp" />
-        <activity android:name=".register2patient" />
-        <activity android:name=".contact" />
-        <activity android:name=".eventsuccess" />
-        <activity android:name=".splash">
+        <activity android:name=".PatientOptionsActivity" />
+        <activity android:name=".OtpActivity" />
+        <activity android:name=".PatientRegistrationActivity" />
+        <activity android:name=".ContactActivity" />
+        <activity android:name=".EventSuccessActivity" />
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".book" />
-        <activity android:name=".history" />
+        <activity android:name=".BookActivity" />
+        <activity android:name=".HistoryActivity" />
     </application>
 
 </manifest>
